@startuml
hide empty members

!include include/FileOperations.puml
!include include/DirOperations.puml
!include include/Block.puml

class SuperBlock
class IndirectBlock<B extends Block>
class DirListBlock
'class DirTreeNode
class DataBlock

Block <|.. SuperBlock
Block <|.. IndirectBlock
Block <|.. DirListBlock
'Block <|.. DirTreeNode
Block <|.. DataBlock

DirOperations <|... DirListBlock
FileOperations <|... DataBlock

@enduml
